force-app/main/default/objects/Presale__c/Presale__c.object-meta.xml
<CustomObject>
    <description>買取商談の先売り欄を個別オブジェクトとして作成</description>
    <label>先売り依頼</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>先売り依頼名</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>