force-app/main/default/objects/Presale__c/fields/Assessment__c.field-meta.xml
<CustomField>
    <fullName>Assessment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>査定表</label>
    <referenceTo>Assessment__c</referenceTo>
    <relationshipLabel>先売り依頼</relationshipLabel>
    <relationshipName>AS_Presale</relationshipName>
    <type>Lookup</type>
</CustomField>