force-app/main/default/objects/Presale__c/fields/car_maker__c.field-meta.xml
<CustomField>
    <fullName>car_maker__c</fullName>
    <description>唄</description>
    <formula>if( isblank( Assessment__r.car_maker__c ),  PurchaseOpportunity__r.Mst_Makers_formula__c , Assessment__r.car_maker__r.Name)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>メーカ</label>
    <type>Text</type>
</CustomField>