force-app/main/default/objects/Presale__c/fields/car_model__c.field-meta.xml
<CustomField>
    <fullName>car_model__c</fullName>
    <description>唄</description>
    <formula>if( isblank(  Assessment__r.car_model__c  ),  PurchaseOpportunity__r.Mst_Models_formula__c , Assessment__r.car_model__r.Name)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>車種</label>
    <type>Text</type>
</CustomField>