force-app/main/default/objects/Presale__c/fields/Chassis_number__c.field-meta.xml
<CustomField>
    <fullName>Chassis_number__c</fullName>
    <label>車台番号</label>
    <length>255</length>
    <type>Text</type>
</CustomField>