force-app/main/default/objects/Presale__c/fields/Competitor_Offer_Price__c.field-meta.xml
<CustomField>
    <fullName>Competitor_Offer_Price__c</fullName>
    <label>他社が提示した金額</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>