force-app/main/default/objects/Presale__c/fields/Customer_Deposit__c.field-meta.xml
<CustomField>
    <fullName>Customer_Deposit__c</fullName>
    <label>デポジット</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>着金済み</fullName>
            </value>
            <value>
                <fullName>請求済み　未着金</fullName>
            </value>
            <value>
                <fullName>請求無し</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>