force-app/main/default/objects/Presale__c/fields/deposit_price__c.field-meta.xml
<CustomField>
    <fullName>deposit_price__c</fullName>
    <label>デポジット請求金額</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>