force-app/main/default/objects/Presale__c/fields/Gross_Profit__c.field-meta.xml
<CustomField>
    <fullName>Gross_Profit__c</fullName>
    <description>預かり金額-提示金額</description>
    <formula>IF(
    ISPICKVAL(PresaleResults__c, &quot;成約&quot;),
   tax_include__c -  Offered_Price__c  ,
    0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>預かり金額-提示金額＝粗利
※先売り営業結果が成約の場合のみ計算</inlineHelpText>
    <label>粗利</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>