force-app/main/default/objects/Presale__c/fields/Lost_Reason__c.field-meta.xml
<CustomField>
    <fullName>Lost_Reason__c</fullName>
    <label>不成約理由</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>他社売却</fullName>
            </value>
            <value>
                <fullName>保管先修理</fullName>
            </value>
            <value>
                <fullName>保管先よりオークション出品</fullName>
            </value>
            <value>
                <fullName>提示金額合わず（その後行先不明）</fullName>
            </value>
            <value>
                <fullName>その他（備考に要記載）</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>