force-app/main/default/objects/Presale__c/fields/Lot_CorporationID__c.field-meta.xml
<CustomField>
    <fullName>Lot_CorporationID__c</fullName>
    <description>唄（買取商談から引用）</description>
    <formula>PurchaseOpportunity__r.Lot_CorporationID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ロット/法人ID</label>
    <type>Text</type>
</CustomField>