force-app/main/default/objects/Presale__c/fields/Offered_Price__c.field-meta.xml
<CustomField>
    <fullName>Offered_Price__c</fullName>
    <label>提示金額（税込）</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>