force-app/main/default/objects/Presale__c/fields/OpportunityImportance__c.field-meta.xml
<CustomField>
    <fullName>OpportunityImportance__c</fullName>
    <label>商談ランク</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>必ず決まる</fullName>
                <label>ランク1（必ず決まる）</label>
            </value>
            <value>
                <fullName>購入できるか不明</fullName>
                <label>ランク3（買取できるか不明）</label>
            </value>
            <value>
                <fullName>不明（希望金額無し等）</fullName>
                <isActive>false</isActive>
                <label>不明（希望金額無し等）</label>
            </value>
            <value>
                <fullName>条件満たせば必ず決まる（相見積あり）</fullName>
                <isActive>false</isActive>
                <label>条件満たせば必ず決まる（相見積あり）</label>
            </value>
            <value>
                <fullName>条件満たせば必ず決まる（相見積無し）</fullName>
                <isActive>false</isActive>
                <label>条件満たせば必ず決まる（相見積無し）</label>
            </value>
            <value>
                <fullName>相場不明</fullName>
                <isActive>false</isActive>
                <label>相場不明</label>
            </value>
            <value>
                <fullName>買取できるか不明（相見積あり）</fullName>
                <isActive>false</isActive>
                <label>買取できるか不明（相見積あり）</label>
            </value>
            <value>
                <fullName>買取できるか不明（相見積無し）</fullName>
                <isActive>false</isActive>
                <label>買取できるか不明（相見積無し）</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>