force-app/main/default/objects/Presale__c/fields/OpportunityImportance_detail__c.field-meta.xml
<CustomField>
    <fullName>OpportunityImportance_detail__c</fullName>
    <label>商談ランク詳細</label>
    <length>255</length>
    <type>Text</type>
</CustomField>