force-app/main/default/objects/Presale__c/fields/Presale_Car_Destination__c.field-meta.xml
<CustomField>
    <fullName>Presale_Car_Destination__c</fullName>
    <description>名古屋および名古屋第2はハブとなるため選択不可でOKとのこと。販売　西さん確認済み</description>
    <label>先売り車輌搬入先</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>15</fullName>
                <label>北海道ヤード</label>
            </value>
            <value>
                <fullName>秋田ヤード</fullName>
            </value>
            <value>
                <fullName>17</fullName>
                <label>岩手ヤード</label>
            </value>
            <value>
                <fullName>7</fullName>
                <label>仙台ヤード</label>
            </value>
            <value>
                <fullName>仙台第二ヤード</fullName>
            </value>
            <value>
                <fullName>水戸ヤード</fullName>
            </value>
            <value>
                <fullName>14</fullName>
                <label>新潟ヤード</label>
            </value>
            <value>
                <fullName>11</fullName>
                <label>栃木ヤード</label>
            </value>
            <value>
                <fullName>20</fullName>
                <label>千葉ヤード</label>
            </value>
            <value>
                <fullName>6</fullName>
                <label>首都圏ヤード</label>
            </value>
            <value>
                <fullName>27</fullName>
                <label>群馬ヤード</label>
            </value>
            <value>
                <fullName>5</fullName>
                <label>神奈川ヤード</label>
            </value>
            <value>
                <fullName>12</fullName>
                <label>静岡ヤード</label>
            </value>
            <value>
                <fullName>春日井ヤード</fullName>
            </value>
            <value>
                <fullName>愛知東ヤード</fullName>
            </value>
            <value>
                <fullName>16</fullName>
                <label>長野ヤード</label>
            </value>
            <value>
                <fullName>28</fullName>
                <label>長野第二ヤード</label>
            </value>
            <value>
                <fullName>岐阜ヤード</fullName>
            </value>
            <value>
                <fullName>10</fullName>
                <label>金沢ヤード</label>
            </value>
            <value>
                <fullName>29</fullName>
                <label>京都ヤード</label>
            </value>
            <value>
                <fullName>1</fullName>
                <label>神戸集中ヤード</label>
            </value>
            <value>
                <fullName>21</fullName>
                <label>神戸第二ヤード</label>
            </value>
            <value>
                <fullName>南大阪ヤード</fullName>
            </value>
            <value>
                <fullName>8</fullName>
                <label>鳥取ヤード</label>
            </value>
            <value>
                <fullName>19</fullName>
                <label>岡山ヤード</label>
            </value>
            <value>
                <fullName>9</fullName>
                <label>広島ヤード</label>
            </value>
            <value>
                <fullName>23</fullName>
                <label>山口ヤード</label>
            </value>
            <value>
                <fullName>18</fullName>
                <label>四国ヤード</label>
            </value>
            <value>
                <fullName>愛媛ヤード</fullName>
            </value>
            <value>
                <fullName>2</fullName>
                <label>福岡ヤード</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>