force-app/main/default/objects/Presale__c/fields/PresaleAmountPresentation__c.field-meta.xml
<CustomField>
    <fullName>PresaleAmountPresentation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>先売り金額提示完了</label>
    <type>Checkbox</type>
</CustomField>