force-app/main/default/objects/Presale__c/fields/PresaleAmountPresentationDeadline__c.field-meta.xml
<CustomField>
    <fullName>PresaleAmountPresentationDeadline__c</fullName>
    <label>先売り金額提示期限</label>
    <type>DateTime</type>
</CustomField>