force-app/main/default/objects/Presale__c/fields/PresaleApprover__c.field-meta.xml
<CustomField>
    <fullName>PresaleApprover__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>先売り承認者</label>
    <referenceTo>User</referenceTo>
    <relationshipName>PresaleApprover_New</relationshipName>
    <type>Lookup</type>
</CustomField>