force-app/main/default/objects/Presale__c/fields/PresaleCarDestinationAddress__c.field-meta.xml
<CustomField>
    <fullName>PresaleCarDestinationAddress__c</fullName>
    <label>先売り車輌搬入先住所</label>
    <type>TextArea</type>
</CustomField>