force-app/main/default/objects/Presale__c/fields/PresaleCarPickupSchedule__c.field-meta.xml
<CustomField>
    <fullName>PresaleCarPickupSchedule__c</fullName>
    <label>先売り車輌引取予定</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>2週間以内</fullName>
            </value>
            <value>
                <fullName>1ヶ月程度</fullName>
            </value>
            <value>
                <fullName>1ヶ月以上</fullName>
            </value>
            <value>
                <fullName>2ヶ月以上</fullName>
            </value>
            <value>
                <fullName>1ヶ月以内</fullName>
                <isActive>false</isActive>
                <label>1ヶ月以内</label>
            </value>
            <value>
                <fullName>決定後すぐ</fullName>
                <isActive>false</isActive>
                <label>決定後すぐ</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>