force-app/main/default/objects/Presale__c/fields/PresaleConditions_Purchase__c.field-meta.xml
<CustomField>
    <fullName>PresaleConditions_Purchase__c</fullName>
    <label>先売り依頼内容</label>
    <type>TextArea</type>
</CustomField>