force-app/main/default/objects/Presale__c/fields/PresaleConditions_Sale__c.field-meta.xml
<CustomField>
    <fullName>PresaleConditions_Sale__c</fullName>
    <label>販売備考</label>
    <type>TextArea</type>
</CustomField>