force-app/main/default/objects/Presale__c/fields/PresaleDepositAmount__c.field-meta.xml
<CustomField>
    <fullName>PresaleDepositAmount__c</fullName>
    <label>先売り預かり金額（税別）</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>