force-app/main/default/objects/Presale__c/fields/PresaleDepositPeriod__c.field-meta.xml
<CustomField>
    <fullName>PresaleDepositPeriod__c</fullName>
    <label>先売り預かり期間</label>
    <type>Date</type>
</CustomField>