force-app/main/default/objects/Presale__c/fields/PresaleDesiredAmount__c.field-meta.xml
<CustomField>
    <fullName>PresaleDesiredAmount__c</fullName>
    <inlineHelpText>仕入元の希望金額。</inlineHelpText>
    <label>先方希望金額</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>