force-app/main/default/objects/Presale__c/fields/PresaleMemberName_2__c.field-meta.xml
<CustomField>
    <fullName>PresaleMemberName_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>2番手預かり業者情報</label>
    <referenceTo>Member__c</referenceTo>
    <relationshipLabel>先売り依頼 (2番手預かり業者情報)</relationshipLabel>
    <relationshipName>PresaleMemberName_2</relationshipName>
    <type>Lookup</type>
</CustomField>