force-app/main/default/objects/Presale__c/fields/PresaleMemberName_3__c.field-meta.xml
<CustomField>
    <fullName>PresaleMemberName_3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>3番手預かり業者情報</label>
    <referenceTo>Member__c</referenceTo>
    <relationshipLabel>先売り依頼 (3番手預かり業者情報)</relationshipLabel>
    <relationshipName>PresaleMemberName_3</relationshipName>
    <type>Lookup</type>
</CustomField>