force-app/main/default/objects/Presale__c/fields/PresaleMemberName__c.field-meta.xml
<CustomField>
    <fullName>PresaleMemberName__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>1番手預かり業者情報</label>
    <referenceTo>Member__c</referenceTo>
    <relationshipLabel>先売り依頼</relationshipLabel>
    <relationshipName>PresaleMemberName</relationshipName>
    <type>Lookup</type>
</CustomField>