force-app/main/default/objects/Presale__c/fields/PresaleMemberOwner_2__c.field-meta.xml
<CustomField>
    <fullName>PresaleMemberOwner_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>先売り販売担当（2番手）</label>
    <referenceTo>User</referenceTo>
    <relationshipName>PresaleMemberOwner_2</relationshipName>
    <type>Lookup</type>
</CustomField>