force-app/main/default/objects/Presale__c/fields/PresaleMemberOwner_3__c.field-meta.xml
<CustomField>
    <fullName>PresaleMemberOwner_3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>先売り販売担当（3番手）</label>
    <referenceTo>User</referenceTo>
    <relationshipName>PresaleMemberOwner_3</relationshipName>
    <type>Lookup</type>
</CustomField>