force-app/main/default/objects/Presale__c/fields/PresaleMemberOwner__c.field-meta.xml
<CustomField>
    <fullName>PresaleMemberOwner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>先売り販売担当</label>
    <referenceTo>User</referenceTo>
    <relationshipName>PresaleMemberOwner</relationshipName>
    <type>Lookup</type>
</CustomField>