force-app/main/default/objects/Presale__c/fields/PresaleOpportunityDetails__c.field-meta.xml
<CustomField>
    <fullName>PresaleOpportunityDetails__c</fullName>
    <label>先売り商談詳細</label>
    <type>TextArea</type>
</CustomField>