force-app/main/default/objects/Presale__c/fields/PresaleRequestedDate__c.field-meta.xml
<CustomField>
    <fullName>PresaleRequestedDate__c</fullName>
    <label>先売り依頼日</label>
    <type>Date</type>
</CustomField>