force-app/main/default/objects/Presale__c/fields/PresaleResults__c.field-meta.xml
<CustomField>
    <fullName>PresaleResults__c</fullName>
    <label>先売り営業結果</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>成約</fullName>
            </value>
            <value>
                <fullName>不成約</fullName>
            </value>
            <value>
                <fullName>不成約(台数のみ計上)</fullName>
            </value>
            <value>
                <fullName>保留</fullName>
            </value>
            <value>
                <fullName>買取指示</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>