force-app/main/default/objects/Presale__c/fields/Purchase_Response_Days__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Response_Days__c</fullName>
    <inlineHelpText>販売が入札結果を仕入担当に伝えてから、仕入担当が仕入先から回答を得て、顧客へ可否を回答できるようになるまでの概算期間を指します。</inlineHelpText>
    <label>買付回答期間</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>2週間以内</fullName>
            </value>
            <value>
                <fullName>1か月程度</fullName>
            </value>
            <value>
                <fullName>1か月以上</fullName>
            </value>
            <value>
                <fullName>2か月以上</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>