force-app/main/default/objects/Presale__c/fields/Purchase_Sales_Forecast__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Sales_Forecast__c</fullName>
    <label>仕入れ営業売り予想</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>