force-app/main/default/objects/Presale__c/fields/PurchaseOpportunity__c.field-meta.xml
<CustomField>
    <fullName>PurchaseOpportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>買取商談</label>
    <referenceTo>PurchaseOpportunity__c</referenceTo>
    <relationshipLabel>先売り依頼</relationshipLabel>
    <relationshipName>PO_Presale</relationshipName>
    <type>Lookup</type>
</CustomField>