force-app/main/default/objects/Presale__c/fields/Sales_Condition__c.field-meta.xml
<CustomField>
    <fullName>Sales_Condition__c</fullName>
    <label>販売条件</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>名変</fullName>
            </value>
            <value>
                <fullName>一時抹消</fullName>
            </value>
            <value>
                <fullName>永久抹消</fullName>
            </value>
            <value>
                <fullName>輸出抹消</fullName>
            </value>
            <value>
                <fullName>未定</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>