force-app/main/default/objects/Presale__c/fields/Sales_Result_Memo__c.field-meta.xml
<CustomField>
    <fullName>Sales_Result_Memo__c</fullName>
    <label>営業結果メモ</label>
    <type>TextArea</type>
</CustomField>