force-app/main/default/objects/Presale__c/fields/tax_include__c.field-meta.xml
<CustomField>
    <fullName>tax_include__c</fullName>
    <formula>PresaleDepositAmount__c *1.1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>預かり金額（税込）</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>