force-app/main/default/objects/Presale__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Assessment__c</columns>
    <columns>Lot_CorporationID__c</columns>
    <columns>car_model__c</columns>
    <columns>PresaleRequestedDate__c</columns>
    <columns>PresaleDesiredAmount__c</columns>
    <columns>PresaleAmountPresentationDeadline__c</columns>
    <columns>PresaleMemberOwner__c</columns>
    <columns>PresaleAmountPresentation__c</columns>
    <filterScope>Everything</filterScope>
    <label>すべて選択</label>
</ListView>